--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "marked": "^4.0.17",
     "register-service-worker": "^1.7.2",
-    "sass-loader": "^12.6.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
